# BackTest

./: .travis.yml  CMakeLists.txt  README.md
src/: main.cpp
src/BackTester/: broker.h  buyandholdstrategy.cpp  buyandholdstrategy.h  dataprovider.cpp  dataprovider.h  dataproviderfactory.h  enums.h  event.h  eventhandle.cpp  eventhandle.h  eventloop.cpp  eventloop.h  eventqueue.cpp  eventqueue.h  fillevent.h  httpdownloader.cpp  httpdownloader.h  ievent.h  interactivebrokers.cpp  interactivebrokers.h  internalevent.h  marketevent.cpp  marketevent.h  ohlcdatapoint.h  orderevent.cpp  orderevent.h  portfoliohandler.cpp  portfoliohandler.h  returntoidleevent.h  signalevent.h  statemachine.cpp  statemachine.h  strategy.h  stringutils.h  transition.h  yahoocsvdataprovider.cpp  yahoocsvdataprovider.h
src/BackTester/Brokers/: broker.h  interactivebrokers.cpp  interactivebrokers.h
src/BackTester/DataProviders/: dataprovider.cpp  dataprovider.h  dataproviderfactory.cpp  dataproviderfactory.h  yahoocsvdataprovider.cpp  yahoocsvdataprovider.h  yahoocsvfiledataprovider.cpp  yahoocsvfiledataprovider.h
src/BackTester/Events/: event.h  marketevent.cpp  marketevent.h  ohlcdatapoint.h  orderevent.cpp  orderevent.h  signalevent.h
src/BackTester/Portfolios/: portfoliohandler.cpp  portfoliohandler.h
src/BackTester/Strategies/: buyandholdstrategy.cpp  buyandholdstrategy.h  strategy.cpp  strategy.h
src/BackTester/Utilities/: httpdownloader.cpp  httpdownloader.h  stringutils.cpp  stringutils.h
src/Gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/main/: eventqueue.cpp  eventqueue.h  main.cpp  mainwindow.h  marketevent.h
src/test/: dataprovidertest.cpp  eventqueuetest.cpp  filleventtest.cpp  httpdownloadertest.cpp  marketeventtest.cpp  ordereventtest.cpp  returntoidletest.cpp  signaleventtest.cpp  statemachinetest.cpp  stringutilstest.cpp  testSquare.cpp  yahoocsvdataprovidertest.cpp
